--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,16 @@
 /* IMPOSTAZIONI GENERALI */
-.baclgra
+
 
 /* HEADER */
-nav{
-    <br>
+div{
+
 }
 /* MAIN */
 
 /* ELEMENTI NEL MAIN - ARTICLE */
-
+span{
+    color: red;
+}
 /* TABELLE */
 
 /* FORM */
